resolução de exercicios responsividade

--- a/aula-1/exercicio-1/index.html
+++ b/aula-1/exercicio-1/index.html
@@ -14,6 +14,8 @@
     <meta charset="UTF-8">
     <!-- Tag title: define o nome do seu documento, aquele que aparecerá na aba do navegador -->
     <title>Exercício 1</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
     <!--
         ANATOMIA DE TAGS HTML
