--- a/aula-1/exercicio-2/index.html
+++ b/aula-1/exercicio-2/index.html
@@ -7,6 +7,8 @@
     <!-- Link de fontes externas. Tem que aparecer antes do link do estilo personalizado -->
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
 </head>
 
