--- a/aula-1/exercicio-3/index.html
+++ b/aula-1/exercicio-3/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <div>
+        <div class="header-caixa">
             <h1>Hello</h1>
             <p>dolor sit amet consectetur adipisicing elit. Qui corrupti, sit iusto molestias hic dolor voluptates</p>       
         </div>
