--- a/aula-3/exercicio-7/index.html
+++ b/aula-3/exercicio-7/index.html
@@ -14,9 +14,10 @@
     <div class="navbar__box">
       <img class="navbar__logo" src="./img/logo.png" alt="logo Mulheres Em Tech">
       <ul class="navbar__nav">
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Conteúdo</a></li>
-        <li><a href="#">Contato</a></li>
+        <li class="navbar__botoes"><a href="#">Sobre</a></li>
+        <li class="navbar__botoes"><a href="#">Conteúdo</a></li>
+        <li class="navbar__botoes"><a href="#">Contato</a></li>
+        
       </ul>
     </div>
   </nav>
